--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name">Mr. Waste</string>
 
     <string name="email">Email</string>
+    <string name="contact_no">Contact No.</string>
     <string name="password">Password</string>
     <string name="sign_up">Sign Up</string>
     <string name="log_in">Log In</string>
+    <string name="consumer">Consumer</string>
+    <string name="mr_waste">Mr. Waste</string>
     <string name="already_registered">Already registered?</string>
     <string name="have_not_registered">Haven\'t registered yet?</string>
 </resources>
