--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="failed_to_get_location">Failed to get current location.</string>
     <string name="gps_permission_denied">Permission denied. Showing current location needs GPS to be turned on.</string>
     <string name="location_permission_denied">Permission denied. Please turn on the location permissions from settings.</string>
+    <string name="camera_permission_denied">Permission denied. Please turn on the camera permissions from settings.</string>
     <string name="auth_failed_no_net">Authentication failed. Check your internet connection and try again.</string>
     <string name="auth_failed_no_net_or_not_reg">Authentication failed. Check your internet connection and be sure to register first if you haven\'t.</string>
 
